# sfml-game

./: CMakeLists.txt  build.bat
src/: Constants.hpp  Main.cpp
src/Classes/: BackgroundRect.cpp  Block.cpp  Bullet.cpp  Collisions.cpp  Entity.cpp  Game.cpp  Item.cpp  Manager.cpp  Player.cpp
src/Headers/: BackgroundRect.hpp  Block.hpp  Bullet.hpp  Collisions.hpp  Entity.hpp  Game.hpp  Item.hpp  Manager.hpp  Player.hpp
src/Structs/: InventoryItem.hpp
